# github-actions-monthly-demo

./: main.py  pyproject.toml
.github/workflows/: create-poetry-monthly-update-pr.yml  create_issue.yml  flake8.yml  isort.yml  lint.yml  mypy-checker.yml
